--- a/Codigos/Análise de BCI/Data.ipynb
+++ b/Codigos/Análise de BCI/Data.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -70,7 +70,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 58,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -83,22 +83,406 @@
     "cols = ['Cz', 'Oz']\n",
     "\n",
     "dataset1 = get_dataset(path='C:\\\\Users\\\\Patrick\\\\Documents\\\\GitHub\\\\BCI_ssvep_dataset\\\\dataset', cols = cols, export_to_file=False, filename='cz-oz.txt', n_seconds_split = split[s])\n",
-    "temp = pd.DataFrame(columns = ['subject', 'state', 'path'])\n",
+    "# temp = pd.DataFrame(columns = ['subject', 'state', 'path'])\n",
     "\n",
-    "for state in [1, 2, 3, 4, 5]:\n",
-    "    df = dataset1[dataset1['class'] == state].reset_index()\n",
-    "    path = 'C:\\\\Users\\\\Patrick\\\\Documents\\\\GitHub\\\\ICDeepLearning\\\\Data\\\\FullDataset\\\\'+s+'\\\\_\\\\'+str(state)\n",
+    "# for state in [1, 2, 3, 4, 5]:\n",
+    "#     df = dataset1[dataset1['class'] == state].reset_index()\n",
+    "#     path = 'C:\\\\Users\\\\Patrick\\\\Documents\\\\GitHub\\\\ICDeepLearning\\\\Data\\\\FullDataset\\\\'+s+'\\\\_\\\\'+str(state)\n",
     "    \n",
-    "    for i in range(len(df)):\n",
-    "        series = df.loc[i][:-1].values\n",
-    "        filePath = path+'\\\\'+str(i)+'.csv'\n",
+    "#     for i in range(len(df)):\n",
+    "#         series = df.loc[i][:-1].values\n",
+    "#         filePath = path+'\\\\'+str(i)+'.csv'\n",
     "        \n",
-    "        tempRow = pd.DataFrame([['_', str(state), filePath]], columns = ['subject', 'state', 'path'])\n",
-    "        temp = temp.append(tempRow)\n",
-    "        np.savetxt(filePath, series)\n",
+    "#         tempRow = pd.DataFrame([['_', str(state), filePath]], columns = ['subject', 'state', 'path'])\n",
+    "#         temp = temp.append(tempRow)\n",
+    "#         np.savetxt(filePath, series)\n",
     "        \n",
-    "temp.to_csv('SSVEPDatasetFullDataset_'+s+'.csv', index = False)\n",
+    "# temp.to_csv('SSVEPDatasetFullDataset_'+s+'.csv', index = False)\n",
     "    "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>0</th>\n",
+       "      <th>1</th>\n",
+       "      <th>2</th>\n",
+       "      <th>3</th>\n",
+       "      <th>4</th>\n",
+       "      <th>5</th>\n",
+       "      <th>6</th>\n",
+       "      <th>7</th>\n",
+       "      <th>8</th>\n",
+       "      <th>9</th>\n",
+       "      <th>...</th>\n",
+       "      <th>503</th>\n",
+       "      <th>504</th>\n",
+       "      <th>505</th>\n",
+       "      <th>506</th>\n",
+       "      <th>507</th>\n",
+       "      <th>508</th>\n",
+       "      <th>509</th>\n",
+       "      <th>510</th>\n",
+       "      <th>511</th>\n",
+       "      <th>class</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>-4.494965e-05</td>\n",
+       "      <td>-4.599640e-05</td>\n",
+       "      <td>0.000004</td>\n",
+       "      <td>-0.000005</td>\n",
+       "      <td>5.513176e-05</td>\n",
+       "      <td>0.000056</td>\n",
+       "      <td>0.000060</td>\n",
+       "      <td>0.000072</td>\n",
+       "      <td>2.816364e-05</td>\n",
+       "      <td>0.000040</td>\n",
+       "      <td>...</td>\n",
+       "      <td>5.844892e-06</td>\n",
+       "      <td>0.000010</td>\n",
+       "      <td>1.004585e-05</td>\n",
+       "      <td>0.000013</td>\n",
+       "      <td>1.480705e-05</td>\n",
+       "      <td>0.000002</td>\n",
+       "      <td>0.000002</td>\n",
+       "      <td>-7.816675e-06</td>\n",
+       "      <td>-0.000008</td>\n",
+       "      <td>1.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>-6.588272e-06</td>\n",
+       "      <td>2.470175e-07</td>\n",
+       "      <td>-0.000004</td>\n",
+       "      <td>0.000006</td>\n",
+       "      <td>-1.499699e-05</td>\n",
+       "      <td>-0.000012</td>\n",
+       "      <td>-0.000034</td>\n",
+       "      <td>-0.000033</td>\n",
+       "      <td>-3.597854e-05</td>\n",
+       "      <td>-0.000032</td>\n",
+       "      <td>...</td>\n",
+       "      <td>1.092971e-04</td>\n",
+       "      <td>0.000124</td>\n",
+       "      <td>8.936505e-05</td>\n",
+       "      <td>0.000048</td>\n",
+       "      <td>5.384931e-06</td>\n",
+       "      <td>-0.000031</td>\n",
+       "      <td>-0.000067</td>\n",
+       "      <td>-6.627265e-05</td>\n",
+       "      <td>-0.000086</td>\n",
+       "      <td>1.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>-6.588272e-06</td>\n",
+       "      <td>2.470175e-07</td>\n",
+       "      <td>-0.000004</td>\n",
+       "      <td>0.000006</td>\n",
+       "      <td>-1.499699e-05</td>\n",
+       "      <td>-0.000012</td>\n",
+       "      <td>-0.000034</td>\n",
+       "      <td>-0.000033</td>\n",
+       "      <td>-3.597854e-05</td>\n",
+       "      <td>-0.000032</td>\n",
+       "      <td>...</td>\n",
+       "      <td>1.092971e-04</td>\n",
+       "      <td>0.000124</td>\n",
+       "      <td>8.936505e-05</td>\n",
+       "      <td>0.000048</td>\n",
+       "      <td>5.384931e-06</td>\n",
+       "      <td>-0.000031</td>\n",
+       "      <td>-0.000067</td>\n",
+       "      <td>-6.627265e-05</td>\n",
+       "      <td>-0.000086</td>\n",
+       "      <td>1.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>-7.613961e-05</td>\n",
+       "      <td>-8.447460e-05</td>\n",
+       "      <td>-0.000075</td>\n",
+       "      <td>-0.000077</td>\n",
+       "      <td>-5.183769e-05</td>\n",
+       "      <td>-0.000049</td>\n",
+       "      <td>-0.000019</td>\n",
+       "      <td>-0.000012</td>\n",
+       "      <td>-6.136906e-06</td>\n",
+       "      <td>0.000005</td>\n",
+       "      <td>...</td>\n",
+       "      <td>-1.122666e-05</td>\n",
+       "      <td>-0.000065</td>\n",
+       "      <td>-2.577276e-05</td>\n",
+       "      <td>-0.000057</td>\n",
+       "      <td>-3.827106e-05</td>\n",
+       "      <td>-0.000034</td>\n",
+       "      <td>-0.000041</td>\n",
+       "      <td>-2.897167e-05</td>\n",
+       "      <td>-0.000043</td>\n",
+       "      <td>1.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>-7.613961e-05</td>\n",
+       "      <td>-8.447460e-05</td>\n",
+       "      <td>-0.000075</td>\n",
+       "      <td>-0.000077</td>\n",
+       "      <td>-5.183769e-05</td>\n",
+       "      <td>-0.000049</td>\n",
+       "      <td>-0.000019</td>\n",
+       "      <td>-0.000012</td>\n",
+       "      <td>-6.136906e-06</td>\n",
+       "      <td>0.000005</td>\n",
+       "      <td>...</td>\n",
+       "      <td>-1.122666e-05</td>\n",
+       "      <td>-0.000065</td>\n",
+       "      <td>-2.577276e-05</td>\n",
+       "      <td>-0.000057</td>\n",
+       "      <td>-3.827106e-05</td>\n",
+       "      <td>-0.000034</td>\n",
+       "      <td>-0.000041</td>\n",
+       "      <td>-2.897167e-05</td>\n",
+       "      <td>-0.000043</td>\n",
+       "      <td>1.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4681</th>\n",
+       "      <td>-1.861917e-06</td>\n",
+       "      <td>-2.172428e-06</td>\n",
+       "      <td>-0.000002</td>\n",
+       "      <td>-0.000005</td>\n",
+       "      <td>-2.735326e-07</td>\n",
+       "      <td>-0.000004</td>\n",
+       "      <td>0.000001</td>\n",
+       "      <td>0.000002</td>\n",
+       "      <td>6.179897e-07</td>\n",
+       "      <td>0.000005</td>\n",
+       "      <td>...</td>\n",
+       "      <td>-1.956493e-06</td>\n",
+       "      <td>0.000006</td>\n",
+       "      <td>-4.301433e-06</td>\n",
+       "      <td>0.000003</td>\n",
+       "      <td>-9.283282e-06</td>\n",
+       "      <td>-0.000001</td>\n",
+       "      <td>-0.000014</td>\n",
+       "      <td>-4.136256e-06</td>\n",
+       "      <td>-0.000014</td>\n",
+       "      <td>5.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4682</th>\n",
+       "      <td>-1.861917e-06</td>\n",
+       "      <td>-2.172428e-06</td>\n",
+       "      <td>-0.000002</td>\n",
+       "      <td>-0.000005</td>\n",
+       "      <td>-2.735326e-07</td>\n",
+       "      <td>-0.000004</td>\n",
+       "      <td>0.000001</td>\n",
+       "      <td>0.000002</td>\n",
+       "      <td>6.179897e-07</td>\n",
+       "      <td>0.000005</td>\n",
+       "      <td>...</td>\n",
+       "      <td>-1.956493e-06</td>\n",
+       "      <td>0.000006</td>\n",
+       "      <td>-4.301433e-06</td>\n",
+       "      <td>0.000003</td>\n",
+       "      <td>-9.283282e-06</td>\n",
+       "      <td>-0.000001</td>\n",
+       "      <td>-0.000014</td>\n",
+       "      <td>-4.136256e-06</td>\n",
+       "      <td>-0.000014</td>\n",
+       "      <td>5.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4683</th>\n",
+       "      <td>-4.794285e-06</td>\n",
+       "      <td>-1.084057e-05</td>\n",
+       "      <td>-0.000004</td>\n",
+       "      <td>-0.000009</td>\n",
+       "      <td>-2.617213e-06</td>\n",
+       "      <td>-0.000008</td>\n",
+       "      <td>-0.000004</td>\n",
+       "      <td>-0.000007</td>\n",
+       "      <td>-7.114740e-06</td>\n",
+       "      <td>-0.000005</td>\n",
+       "      <td>...</td>\n",
+       "      <td>1.370913e-05</td>\n",
+       "      <td>-0.000002</td>\n",
+       "      <td>1.195359e-05</td>\n",
+       "      <td>-0.000003</td>\n",
+       "      <td>8.465389e-06</td>\n",
+       "      <td>-0.000003</td>\n",
+       "      <td>0.000007</td>\n",
+       "      <td>-8.793510e-07</td>\n",
+       "      <td>0.000008</td>\n",
+       "      <td>5.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4684</th>\n",
+       "      <td>-4.794285e-06</td>\n",
+       "      <td>-1.084057e-05</td>\n",
+       "      <td>-0.000004</td>\n",
+       "      <td>-0.000009</td>\n",
+       "      <td>-2.617213e-06</td>\n",
+       "      <td>-0.000008</td>\n",
+       "      <td>-0.000004</td>\n",
+       "      <td>-0.000007</td>\n",
+       "      <td>-7.114740e-06</td>\n",
+       "      <td>-0.000005</td>\n",
+       "      <td>...</td>\n",
+       "      <td>1.370913e-05</td>\n",
+       "      <td>-0.000002</td>\n",
+       "      <td>1.195359e-05</td>\n",
+       "      <td>-0.000003</td>\n",
+       "      <td>8.465389e-06</td>\n",
+       "      <td>-0.000003</td>\n",
+       "      <td>0.000007</td>\n",
+       "      <td>-8.793510e-07</td>\n",
+       "      <td>0.000008</td>\n",
+       "      <td>5.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4685</th>\n",
+       "      <td>-1.245016e-07</td>\n",
+       "      <td>1.066750e-05</td>\n",
+       "      <td>0.000001</td>\n",
+       "      <td>0.000009</td>\n",
+       "      <td>3.851806e-06</td>\n",
+       "      <td>0.000001</td>\n",
+       "      <td>0.000004</td>\n",
+       "      <td>-0.000007</td>\n",
+       "      <td>1.727603e-06</td>\n",
+       "      <td>-0.000013</td>\n",
+       "      <td>...</td>\n",
+       "      <td>-6.118264e-07</td>\n",
+       "      <td>0.000003</td>\n",
+       "      <td>-8.432380e-07</td>\n",
+       "      <td>0.000005</td>\n",
+       "      <td>4.997128e-07</td>\n",
+       "      <td>0.000006</td>\n",
+       "      <td>0.000002</td>\n",
+       "      <td>6.362496e-06</td>\n",
+       "      <td>0.000006</td>\n",
+       "      <td>5.0</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>4686 rows × 513 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                 0             1         2         3             4         5  \\\n",
+       "0    -4.494965e-05 -4.599640e-05  0.000004 -0.000005  5.513176e-05  0.000056   \n",
+       "1    -6.588272e-06  2.470175e-07 -0.000004  0.000006 -1.499699e-05 -0.000012   \n",
+       "2    -6.588272e-06  2.470175e-07 -0.000004  0.000006 -1.499699e-05 -0.000012   \n",
+       "3    -7.613961e-05 -8.447460e-05 -0.000075 -0.000077 -5.183769e-05 -0.000049   \n",
+       "4    -7.613961e-05 -8.447460e-05 -0.000075 -0.000077 -5.183769e-05 -0.000049   \n",
+       "...            ...           ...       ...       ...           ...       ...   \n",
+       "4681 -1.861917e-06 -2.172428e-06 -0.000002 -0.000005 -2.735326e-07 -0.000004   \n",
+       "4682 -1.861917e-06 -2.172428e-06 -0.000002 -0.000005 -2.735326e-07 -0.000004   \n",
+       "4683 -4.794285e-06 -1.084057e-05 -0.000004 -0.000009 -2.617213e-06 -0.000008   \n",
+       "4684 -4.794285e-06 -1.084057e-05 -0.000004 -0.000009 -2.617213e-06 -0.000008   \n",
+       "4685 -1.245016e-07  1.066750e-05  0.000001  0.000009  3.851806e-06  0.000001   \n",
+       "\n",
+       "             6         7             8         9  ...           503       504  \\\n",
+       "0     0.000060  0.000072  2.816364e-05  0.000040  ...  5.844892e-06  0.000010   \n",
+       "1    -0.000034 -0.000033 -3.597854e-05 -0.000032  ...  1.092971e-04  0.000124   \n",
+       "2    -0.000034 -0.000033 -3.597854e-05 -0.000032  ...  1.092971e-04  0.000124   \n",
+       "3    -0.000019 -0.000012 -6.136906e-06  0.000005  ... -1.122666e-05 -0.000065   \n",
+       "4    -0.000019 -0.000012 -6.136906e-06  0.000005  ... -1.122666e-05 -0.000065   \n",
+       "...        ...       ...           ...       ...  ...           ...       ...   \n",
+       "4681  0.000001  0.000002  6.179897e-07  0.000005  ... -1.956493e-06  0.000006   \n",
+       "4682  0.000001  0.000002  6.179897e-07  0.000005  ... -1.956493e-06  0.000006   \n",
+       "4683 -0.000004 -0.000007 -7.114740e-06 -0.000005  ...  1.370913e-05 -0.000002   \n",
+       "4684 -0.000004 -0.000007 -7.114740e-06 -0.000005  ...  1.370913e-05 -0.000002   \n",
+       "4685  0.000004 -0.000007  1.727603e-06 -0.000013  ... -6.118264e-07  0.000003   \n",
+       "\n",
+       "               505       506           507       508       509           510  \\\n",
+       "0     1.004585e-05  0.000013  1.480705e-05  0.000002  0.000002 -7.816675e-06   \n",
+       "1     8.936505e-05  0.000048  5.384931e-06 -0.000031 -0.000067 -6.627265e-05   \n",
+       "2     8.936505e-05  0.000048  5.384931e-06 -0.000031 -0.000067 -6.627265e-05   \n",
+       "3    -2.577276e-05 -0.000057 -3.827106e-05 -0.000034 -0.000041 -2.897167e-05   \n",
+       "4    -2.577276e-05 -0.000057 -3.827106e-05 -0.000034 -0.000041 -2.897167e-05   \n",
+       "...            ...       ...           ...       ...       ...           ...   \n",
+       "4681 -4.301433e-06  0.000003 -9.283282e-06 -0.000001 -0.000014 -4.136256e-06   \n",
+       "4682 -4.301433e-06  0.000003 -9.283282e-06 -0.000001 -0.000014 -4.136256e-06   \n",
+       "4683  1.195359e-05 -0.000003  8.465389e-06 -0.000003  0.000007 -8.793510e-07   \n",
+       "4684  1.195359e-05 -0.000003  8.465389e-06 -0.000003  0.000007 -8.793510e-07   \n",
+       "4685 -8.432380e-07  0.000005  4.997128e-07  0.000006  0.000002  6.362496e-06   \n",
+       "\n",
+       "           511  class  \n",
+       "0    -0.000008    1.0  \n",
+       "1    -0.000086    1.0  \n",
+       "2    -0.000086    1.0  \n",
+       "3    -0.000043    1.0  \n",
+       "4    -0.000043    1.0  \n",
+       "...        ...    ...  \n",
+       "4681 -0.000014    5.0  \n",
+       "4682 -0.000014    5.0  \n",
+       "4683  0.000008    5.0  \n",
+       "4684  0.000008    5.0  \n",
+       "4685  0.000006    5.0  \n",
+       "\n",
+       "[4686 rows x 513 columns]"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "dataset1"
    ]
   },
   {
