--- a/Codigos/Análise de BCI/SSVEP_ResNetGAF.ipynb
+++ b/Codigos/Análise de BCI/SSVEP_ResNetGAF.ipynb
@@ -66,7 +66,8 @@
    "outputs": [],
    "source": [
     "def getData(dataType):\n",
-    "    figPath = path('C:\\\\Users\\\\Patrick\\\\Documents\\\\GitHub\\\\ICDeepLearning\\\\Data\\\\GAF_Combinados\\\\'+dataType)\n",
+    "    folder = 'GAF_ProcessedSignals'\n",
+    "    figPath = path('C:\\\\Users\\\\Patrick\\\\Documents\\\\GitHub\\\\ICDeepLearning\\\\Data\\\\'+folder+'\\\\'+dataType)\n",
     "\n",
     "    dataset = datasets.ImageFolder(root = figPath(),\n",
     "                                  transform = transforms.Compose([\n",
@@ -327,7 +328,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -384,116 +385,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
-   "metadata": {
-    "collapsed": true,
-    "jupyter": {
-     "outputs_hidden": true
-    }
-   },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Training stage:768\n",
-      "Epoch 0/14\n",
-      "----------\n",
-      "train Loss: 7.0872 Acc: 0.0613\n",
-      "val Loss: 2.8144 Acc: 0.2090\n",
-      "\n",
-      "Epoch 1/14\n",
-      "----------\n",
-      "train Loss: 1.6094 Acc: 0.4213\n",
-      "val Loss: 2.0899 Acc: 0.1967\n",
-      "\n",
-      "Epoch 2/14\n",
-      "----------\n",
-      "train Loss: 0.8152 Acc: 0.7137\n",
-      "val Loss: 2.0526 Acc: 0.2090\n",
-      "\n",
-      "Epoch 3/14\n",
-      "----------\n",
-      "train Loss: 0.4241 Acc: 0.9274\n",
-      "val Loss: 2.1196 Acc: 0.2131\n",
-      "\n",
-      "Epoch 4/14\n",
-      "----------\n",
-      "train Loss: 0.2295 Acc: 0.9857\n",
-      "val Loss: 2.2294 Acc: 0.1926\n",
-      "\n",
-      "Epoch 5/14\n",
-      "----------\n",
-      "train Loss: 0.1370 Acc: 0.9969\n",
-      "val Loss: 2.3079 Acc: 0.1885\n",
-      "\n",
-      "Epoch 6/14\n",
-      "----------\n",
-      "train Loss: 0.0928 Acc: 0.9990\n",
-      "val Loss: 2.3327 Acc: 0.1967\n",
-      "\n",
-      "Epoch 7/14\n",
-      "----------\n",
-      "train Loss: 0.0629 Acc: 1.0000\n",
-      "val Loss: 2.3178 Acc: 0.2090\n",
-      "\n",
-      "Epoch 8/14\n",
-      "----------\n",
-      "train Loss: 0.0640 Acc: 1.0000\n",
-      "val Loss: 2.3195 Acc: 0.2090\n",
-      "\n",
-      "Epoch 9/14\n",
-      "----------\n",
-      "train Loss: 0.0596 Acc: 1.0000\n",
-      "val Loss: 2.3379 Acc: 0.2008\n",
-      "\n",
-      "Epoch 10/14\n",
-      "----------\n",
-      "train Loss: 0.0586 Acc: 1.0000\n",
-      "val Loss: 2.3305 Acc: 0.2131\n",
-      "\n",
-      "Epoch 11/14\n",
-      "----------\n",
-      "train Loss: 0.0535 Acc: 1.0000\n",
-      "val Loss: 2.3412 Acc: 0.2131\n",
-      "\n",
-      "Epoch 12/14\n",
-      "----------\n",
-      "train Loss: 0.0531 Acc: 0.9990\n",
-      "val Loss: 2.3351 Acc: 0.2172\n",
-      "\n",
-      "Epoch 13/14\n",
-      "----------\n",
-      "train Loss: 0.0510 Acc: 1.0000\n",
-      "val Loss: 2.3405 Acc: 0.2090\n",
-      "\n",
-      "Epoch 14/14\n",
-      "----------\n",
-      "train Loss: 0.0504 Acc: 0.9990\n",
-      "val Loss: 2.3591 Acc: 0.2131\n",
-      "\n",
-      "Training complete in 22m 9s\n",
-      "Best val Acc: 0.217213\n"
-     ]
-    }
-   ],
-   "source": [
-    "modelType = 'resnet'\n",
-    "modelSize = '34'\n",
-    "dataType = '768'\n",
-    "\n",
-    "autoTraining(modelType, modelSize, dataType)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 54,
-   "metadata": {
-    "collapsed": true,
-    "jupyter": {
-     "outputs_hidden": true
-    }
-   },
+   "execution_count": 6,
+   "metadata": {},
    "outputs": [
     {
      "name": "stdout",
@@ -502,81 +395,81 @@
       "Training stage:512\n",
       "Epoch 0/14\n",
       "----------\n",
-      "train Loss: 2.0524 Acc: 0.2472\n",
-      "val Loss: 2.0881 Acc: 0.2045\n",
+      "train Loss: 5.5820 Acc: 0.1158\n",
+      "val Loss: 2.1599 Acc: 0.1978\n",
       "\n",
       "Epoch 1/14\n",
       "----------\n",
-      "train Loss: 1.0837 Acc: 0.5859\n",
-      "val Loss: 1.9607 Acc: 0.2532\n",
+      "train Loss: 1.5533 Acc: 0.3527\n",
+      "val Loss: 1.9213 Acc: 0.1978\n",
       "\n",
       "Epoch 2/14\n",
       "----------\n",
-      "train Loss: 0.5162 Acc: 0.8760\n",
-      "val Loss: 1.9684 Acc: 0.2500\n",
+      "train Loss: 1.1405 Acc: 0.5653\n",
+      "val Loss: 1.9019 Acc: 0.2033\n",
       "\n",
       "Epoch 3/14\n",
       "----------\n",
-      "train Loss: 0.2386 Acc: 0.9749\n",
-      "val Loss: 2.0883 Acc: 0.2825\n",
+      "train Loss: 0.8219 Acc: 0.7271\n",
+      "val Loss: 2.0621 Acc: 0.2033\n",
       "\n",
       "Epoch 4/14\n",
       "----------\n",
-      "train Loss: 0.1106 Acc: 0.9951\n",
-      "val Loss: 2.1389 Acc: 0.2662\n",
+      "train Loss: 0.5662 Acc: 0.8510\n",
+      "val Loss: 2.2003 Acc: 0.2249\n",
       "\n",
       "Epoch 5/14\n",
       "----------\n",
-      "train Loss: 0.0735 Acc: 0.9976\n",
-      "val Loss: 2.1800 Acc: 0.2662\n",
+      "train Loss: 0.3758 Acc: 0.9276\n",
+      "val Loss: 2.3159 Acc: 0.2141\n",
       "\n",
       "Epoch 6/14\n",
       "----------\n",
-      "train Loss: 0.0472 Acc: 0.9992\n",
-      "val Loss: 2.2152 Acc: 0.2727\n",
+      "train Loss: 0.2854 Acc: 0.9499\n",
+      "val Loss: 2.5856 Acc: 0.1978\n",
       "\n",
       "Epoch 7/14\n",
       "----------\n",
-      "train Loss: 0.0371 Acc: 0.9992\n",
-      "val Loss: 2.2043 Acc: 0.2727\n",
+      "train Loss: 0.1615 Acc: 0.9871\n",
+      "val Loss: 2.5118 Acc: 0.1924\n",
       "\n",
       "Epoch 8/14\n",
       "----------\n",
-      "train Loss: 0.0397 Acc: 1.0000\n",
-      "val Loss: 2.2168 Acc: 0.2630\n",
+      "train Loss: 0.1398 Acc: 0.9939\n",
+      "val Loss: 2.4952 Acc: 0.1978\n",
       "\n",
       "Epoch 9/14\n",
       "----------\n",
-      "train Loss: 0.0383 Acc: 1.0000\n",
-      "val Loss: 2.2120 Acc: 0.2695\n",
+      "train Loss: 0.1189 Acc: 0.9966\n",
+      "val Loss: 2.5079 Acc: 0.1924\n",
       "\n",
       "Epoch 10/14\n",
       "----------\n",
-      "train Loss: 0.0376 Acc: 1.0000\n",
-      "val Loss: 2.2123 Acc: 0.2825\n",
+      "train Loss: 0.1120 Acc: 0.9953\n",
+      "val Loss: 2.5061 Acc: 0.1978\n",
       "\n",
       "Epoch 11/14\n",
       "----------\n",
-      "train Loss: 0.0354 Acc: 1.0000\n",
-      "val Loss: 2.2263 Acc: 0.2825\n",
+      "train Loss: 0.1030 Acc: 0.9986\n",
+      "val Loss: 2.5370 Acc: 0.2060\n",
       "\n",
       "Epoch 12/14\n",
       "----------\n",
-      "train Loss: 0.0322 Acc: 1.0000\n",
-      "val Loss: 2.2280 Acc: 0.2857\n",
+      "train Loss: 0.1013 Acc: 0.9966\n",
+      "val Loss: 2.4930 Acc: 0.2114\n",
       "\n",
       "Epoch 13/14\n",
       "----------\n",
-      "train Loss: 0.0338 Acc: 0.9992\n",
-      "val Loss: 2.2369 Acc: 0.2695\n",
+      "train Loss: 0.0968 Acc: 0.9973\n",
+      "val Loss: 2.5548 Acc: 0.2114\n",
       "\n",
       "Epoch 14/14\n",
       "----------\n",
-      "train Loss: 0.0314 Acc: 0.9992\n",
-      "val Loss: 2.2382 Acc: 0.2695\n",
+      "train Loss: 0.0944 Acc: 0.9993\n",
+      "val Loss: 2.5256 Acc: 0.2087\n",
       "\n",
-      "Training complete in 27m 48s\n",
-      "Best val Acc: 0.285714\n"
+      "Training complete in 33m 27s\n",
+      "Best val Acc: 0.224932\n"
      ]
     }
    ],
@@ -587,6 +480,13 @@
     "\n",
     "autoTraining(modelType, modelSize, dataType)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
