--- a/Codigos/Análise de BCI/SSVEP_ResNetGAF.ipynb
+++ b/Codigos/Análise de BCI/SSVEP_ResNetGAF.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -33,7 +33,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -43,7 +43,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -61,12 +61,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
     "def getData(dataType):\n",
-    "    folder = 'GAF_ProcessedSignals'\n",
+    "    folder = 'GAF_Combinados'\n",
     "    figPath = path('C:\\\\Users\\\\Patrick\\\\Documents\\\\GitHub\\\\ICDeepLearning\\\\Data\\\\'+folder+'\\\\'+dataType)\n",
     "\n",
     "    dataset = datasets.ImageFolder(root = figPath(),\n",
@@ -220,7 +220,7 @@
     "        model.train(mode = was_training)\n",
     "        \n",
     "        \n",
-    "def trainModel(model, modelName, criterion, optimizer, scheduler, dataType):\n",
+    "def trainModel(model, modelName, criterion, optimizer, scheduler, dataType, figSize):\n",
     "#     dataTypes = ['512', '768', 'shifted']\n",
     "    stats = {\n",
     "        '512': [],\n",
@@ -230,9 +230,9 @@
     "    \n",
     "    print(\"Training stage:{}\".format(dataType))\n",
     "    dataloaders, dataset_sizes, dataloader, _ = getData(dataType)\n",
-    "    model, *stats[dataType] = train_model(model, criterion, optimizer, scheduler, dataloaders, dataset_sizes, dataloader, num_epochs = 15)\n",
-    "#         torch.save(model.state_dict(), 'Models\\\\'+modelName+'\\\\'+t+\".pth\")\n",
-    "#         torch.save(stats, 'Models\\\\'+modelName+'\\\\stats'+t+'.pth')\n",
+    "    model, *stats[dataType] = train_model(model, criterion, optimizer, scheduler, dataloaders, dataset_sizes, dataloader, num_epochs = 5)\n",
+    "    torch.save(model.state_dict(), 'Models\\\\'+modelName+'\\\\cca'+figSize+\"\\\\model.pth\")\n",
+    "    torch.save(stats, 'Models\\\\'+modelName+'\\\\cca'+figSize+'\\\\stats'+dataType+'.pth')\n",
     "        \n",
     "    return model, stats"
    ]
@@ -243,28 +243,6 @@
    "source": [
     "***\n",
     "Example"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 9,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "tensor([2, 1, 2, 0, 1, 1, 2, 0, 2, 1, 2, 2, 4, 3, 3, 2, 2, 4, 0, 4, 1, 3, 3, 4,\n",
-       "        0, 2, 2, 0, 3, 2, 3, 1, 4, 0, 2, 1, 2, 0, 1, 4, 2, 2, 1, 3, 4, 0, 1, 4,\n",
-       "        4, 0, 2, 1, 2, 2, 4, 2, 4, 4, 4, 2, 4, 3, 1, 4])"
-      ]
-     },
-     "execution_count": 9,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "classes"
    ]
   },
   {
@@ -368,7 +346,7 @@
     "    }\n",
     "    return Dict[modelType](model)\n",
     "\n",
-    "def autoTraining(modelType, modelSize, dataType):\n",
+    "def autoTraining(modelType, modelSize, dataType, figSize):\n",
     "    modelName = modelType+modelSize\n",
     "    numClasses = 5\n",
     "    model = modelDict[modelName][0]\n",
@@ -379,13 +357,13 @@
     "    criterion = nn.CrossEntropyLoss()\n",
     "    optimizer = optim.SGD(model.parameters(), lr = 0.001, momentum = 0.9)\n",
     "    scheduler = optim.lr_scheduler.StepLR(optimizer, step_size = 7, gamma = 0.1)\n",
-    "    model, stats = trainModel(model, modelName, criterion, optimizer, scheduler, dataType)\n",
-    "#     del(model)"
+    "    model, stats = trainModel(model, modelName, criterion, optimizer, scheduler, dataType, figSize)\n",
+    "    del(model)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -393,83 +371,194 @@
      "output_type": "stream",
      "text": [
       "Training stage:512\n",
-      "Epoch 0/14\n",
+      "Epoch 0/4\n",
       "----------\n",
-      "train Loss: 5.5820 Acc: 0.1158\n",
-      "val Loss: 2.1599 Acc: 0.1978\n",
+      "train Loss: 1.4870 Acc: 0.3640\n",
+      "val Loss: 1.3648 Acc: 0.4634\n",
       "\n",
-      "Epoch 1/14\n",
+      "Epoch 1/4\n",
       "----------\n",
-      "train Loss: 1.5533 Acc: 0.3527\n",
-      "val Loss: 1.9213 Acc: 0.1978\n",
+      "train Loss: 0.8241 Acc: 0.7289\n",
+      "val Loss: 1.0437 Acc: 0.6355\n",
       "\n",
-      "Epoch 2/14\n",
+      "Epoch 2/4\n",
       "----------\n",
-      "train Loss: 1.1405 Acc: 0.5653\n",
-      "val Loss: 1.9019 Acc: 0.2033\n",
+      "train Loss: 0.3434 Acc: 0.9396\n",
+      "val Loss: 0.7623 Acc: 0.7619\n",
       "\n",
-      "Epoch 3/14\n",
+      "Epoch 3/4\n",
       "----------\n",
-      "train Loss: 0.8219 Acc: 0.7271\n",
-      "val Loss: 2.0621 Acc: 0.2033\n",
+      "train Loss: 0.1476 Acc: 0.9886\n",
+      "val Loss: 0.7300 Acc: 0.7491\n",
       "\n",
-      "Epoch 4/14\n",
+      "Epoch 4/4\n",
       "----------\n",
-      "train Loss: 0.5662 Acc: 0.8510\n",
-      "val Loss: 2.2003 Acc: 0.2249\n",
+      "train Loss: 0.0743 Acc: 0.9986\n",
+      "val Loss: 0.7189 Acc: 0.7509\n",
       "\n",
-      "Epoch 5/14\n",
-      "----------\n",
-      "train Loss: 0.3758 Acc: 0.9276\n",
-      "val Loss: 2.3159 Acc: 0.2141\n",
-      "\n",
-      "Epoch 6/14\n",
-      "----------\n",
-      "train Loss: 0.2854 Acc: 0.9499\n",
-      "val Loss: 2.5856 Acc: 0.1978\n",
-      "\n",
-      "Epoch 7/14\n",
-      "----------\n",
-      "train Loss: 0.1615 Acc: 0.9871\n",
-      "val Loss: 2.5118 Acc: 0.1924\n",
-      "\n",
-      "Epoch 8/14\n",
-      "----------\n",
-      "train Loss: 0.1398 Acc: 0.9939\n",
-      "val Loss: 2.4952 Acc: 0.1978\n",
-      "\n",
-      "Epoch 9/14\n",
-      "----------\n",
-      "train Loss: 0.1189 Acc: 0.9966\n",
-      "val Loss: 2.5079 Acc: 0.1924\n",
-      "\n",
-      "Epoch 10/14\n",
-      "----------\n",
-      "train Loss: 0.1120 Acc: 0.9953\n",
-      "val Loss: 2.5061 Acc: 0.1978\n",
-      "\n",
-      "Epoch 11/14\n",
-      "----------\n",
-      "train Loss: 0.1030 Acc: 0.9986\n",
-      "val Loss: 2.5370 Acc: 0.2060\n",
-      "\n",
-      "Epoch 12/14\n",
-      "----------\n",
-      "train Loss: 0.1013 Acc: 0.9966\n",
-      "val Loss: 2.4930 Acc: 0.2114\n",
-      "\n",
-      "Epoch 13/14\n",
-      "----------\n",
-      "train Loss: 0.0968 Acc: 0.9973\n",
-      "val Loss: 2.5548 Acc: 0.2114\n",
-      "\n",
-      "Epoch 14/14\n",
-      "----------\n",
-      "train Loss: 0.0944 Acc: 0.9993\n",
-      "val Loss: 2.5256 Acc: 0.2087\n",
-      "\n",
-      "Training complete in 33m 27s\n",
-      "Best val Acc: 0.224932\n"
+      "Training complete in 17m 51s\n",
+      "Best val Acc: 0.761905\n"
+     ]
+    }
+   ],
+   "source": [
+    "modelType = 'resnet'\n",
+    "modelSize = '34'\n",
+    "dataType = '512'\n",
+    "figSize = '_final'\n",
+    "\n",
+    "autoTraining(modelType, modelSize, dataType, figSize)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "stats = torch.load(path)[dataType]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[[[tensor(0.5426, device='cuda:0', dtype=torch.float64),\n",
+       "   tensor(0.9409, device='cuda:0', dtype=torch.float64),\n",
+       "   tensor(0.9986, device='cuda:0', dtype=torch.float64),\n",
+       "   tensor(1., device='cuda:0', dtype=torch.float64),\n",
+       "   tensor(1., device='cuda:0', dtype=torch.float64)],\n",
+       "  [1.2832824795237392,\n",
+       "   0.26474996364160336,\n",
+       "   0.057314467954111624,\n",
+       "   0.022420908941890732,\n",
+       "   0.015077269120967431]],\n",
+       " [[tensor(0.5952, device='cuda:0', dtype=torch.float64),\n",
+       "   tensor(0.7491, device='cuda:0', dtype=torch.float64),\n",
+       "   tensor(0.7564, device='cuda:0', dtype=torch.float64),\n",
+       "   tensor(0.7582, device='cuda:0', dtype=torch.float64),\n",
+       "   tensor(0.7637, device='cuda:0', dtype=torch.float64)],\n",
+       "  [1.1729722433474474,\n",
+       "   0.725186328748207,\n",
+       "   0.7022265881409139,\n",
+       "   0.7039976901623792,\n",
+       "   0.6873661273128384]]]"
+      ]
+     },
+     "execution_count": 21,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "stats"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "trainAcc = torch.load(path)[dataType][0][0]\n",
+    "valAcc = torch.load(path)[dataType][1][0]\n",
+    "\n",
+    "# for i in range(len(stats)):\n",
+    "#     stats[i] = stats[i].item()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[tensor(0.5426, device='cuda:0', dtype=torch.float64), tensor(0.9409, device='cuda:0', dtype=torch.float64), tensor(0.9986, device='cuda:0', dtype=torch.float64), tensor(1., device='cuda:0', dtype=torch.float64), tensor(1., device='cuda:0', dtype=torch.float64)]\n",
+      "[tensor(0.5952, device='cuda:0', dtype=torch.float64), tensor(0.7491, device='cuda:0', dtype=torch.float64), tensor(0.7564, device='cuda:0', dtype=torch.float64), tensor(0.7582, device='cuda:0', dtype=torch.float64), tensor(0.7637, device='cuda:0', dtype=torch.float64)]\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(trainAcc)\n",
+    "print(valAcc)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "cca128\n",
+      "512 - Accuracy: 0.7637362637362637\n"
+     ]
+    }
+   ],
+   "source": [
+    "folder = 'cca128'\n",
+    "print(folder)\n",
+    "for dataType in ['512']:\n",
+    "#     dataType = '512'\n",
+    "    path = 'Models\\\\resnet34\\\\'+folder+'\\\\stats'+dataType+\".pth\"\n",
+    "    stats = torch.load(path)[dataType][1][0]\n",
+    "    for i in range(len(stats)):\n",
+    "        stats[i] = stats[i].item()\n",
+    "\n",
+    "    print(dataType+\" - Accuracy: {}\".format(max(stats)))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 33,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "WCAR\n",
+      "512 - Accuracy: 0.27941176470588236\n",
+      "768 - Accuracy: 0.2311111111111111\n"
+     ]
+    }
+   ],
+   "source": [
+    "folder = 'WCAR'\n",
+    "print(folder)\n",
+    "for dataType in ['512', '768']:\n",
+    "#     dataType = '512'\n",
+    "    path = 'Models\\\\resnet34\\\\'+folder+'\\\\stats'+dataType+\".pth\"\n",
+    "    stats = torch.load(path)[dataType][1][0]\n",
+    "    for i in range(len(stats)):\n",
+    "        stats[i] = stats[i].item()\n",
+    "\n",
+    "    print(dataType+\" - Accuracy: {}\".format(max(stats)))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 'autoTraining' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[1;32m<ipython-input-5-46ee182bd1f8>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[0;32m      3\u001b[0m \u001b[0mdataType\u001b[0m \u001b[1;33m=\u001b[0m \u001b[1;34m'512'\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      4\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m----> 5\u001b[1;33m \u001b[0mautoTraining\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mmodelType\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mmodelSize\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mdataType\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[1;31mNameError\u001b[0m: name 'autoTraining' is not defined"
      ]
     }
    ],
