--- a/Codigos/Análise de BCI/Linear combination of time series.ipynb
+++ b/Codigos/Análise de BCI/Linear combination of time series.ipynb
@@ -2,9 +2,18 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 4,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The autoreload extension is already loaded. To reload it, use:\n",
+      "  %reload_ext autoreload\n"
+     ]
+    }
+   ],
    "source": [
     "%load_ext autoreload\n",
     "%autoreload 2"
@@ -12,7 +21,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -45,12 +54,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
     "def read_data(dataframe):\n",
-    "    return pd.read_csv(dataframe['path'], names = range(1, 16+1), dtype = float)"
+    "    return pd.read_csv(dataframe['path'], header = None, dtype = np.float64)"
    ]
   },
   {
@@ -63,12 +72,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 63,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
-    "dataType = '256'\n",
-    "dataprep(dataType)\n",
+    "dataType = '512'\n",
+    "dataprep(dataType, outputPath = 'Originais_CCA')\n",
     "data = pd.read_csv('SSVEPDataset_'+dataType+'.csv')\n",
     "combData = pd.DataFrame(columns = ['subject', 'path', \"state\"])\n",
     "for i in range(len(data)):\n",
@@ -80,7 +89,7 @@
     "#     for j in range(4, 16):\n",
     "#         series += (0.4/13)*sample[j]\n",
     "        \n",
-    "    newPath = indData['path'].replace('Originais', 'Dados_BCI_Combinados')\n",
+    "    newPath = indData['path'].replace('Originais_CCA', 'Dados_BCI_Combinados')\n",
     "    tempRow = pd.DataFrame([[indData['subject'], newPath, indData['state']]], columns = ['subject', 'path', 'state'])\n",
     "    combData = combData.append(tempRow)\n",
     "    np.savetxt(newPath, series)\n",
@@ -102,15 +111,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 71,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [],
    "source": [
     "from sklearn.decomposition import PCA\n",
     "pca = PCA(n_components = 3)\n",
     "\n",
-    "dataType = '768'\n",
-    "dataprep(dataType)\n",
+    "dataType = '256'\n",
+    "dataprep(dataType, outputPath = 'Originais_CCA')\n",
     "data = pd.read_csv('SSVEPDataset_'+dataType+'.csv')\n",
     "combData = pd.DataFrame(columns = ['subject', 'path', \"state\"])\n",
     "for i in range(len(data)):\n",
@@ -120,7 +129,7 @@
     "    C1, C2, C3 = pca.components_\n",
     "    series = (C1.dot(sample.T) + C2.dot(sample.T) + C3.dot(sample.T))/3\n",
     "    \n",
-    "    newPath = indData['path'].replace('Originais', 'Dados_BCI_CombinadosPCA')\n",
+    "    newPath = indData['path'].replace('Originais_CCA', 'Dados_BCI_CombinadosPCA')\n",
     "    tempRow = pd.DataFrame([[indData['subject'], newPath, indData['state']]], columns = ['subject', 'path', 'state'])\n",
     "    combData = combData.append(tempRow)\n",
     "    np.savetxt(newPath, series)\n",
